--- a/bindServiceDemo/src/main/res/layout/activity_main.xml
+++ b/bindServiceDemo/src/main/res/layout/activity_main.xml
@@ -6,25 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/bindTv"
+    <Button
+        android:id="@+id/bindBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bind"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/unBindTv"
+        app:layout_constraintEnd_toStartOf="@+id/unBindBtn"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/unBindTv"
+    <Button
+        android:id="@+id/unBindBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="unBind"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bindTv"
+        app:layout_constraintStart_toEndOf="@+id/bindBtn"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
